fix overflow html & body, fix centering of submit btn

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,10 @@
   font-family: Roboto;
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
 
 .custom-rounded {
   border-radius: 15px;
